plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.edison'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

springBoot {
    mainClass = 'com.edison.project.ProjectApplication'  // 실행할 Main 클래스
}

bootJar {
    enabled = true
    mainClass = 'com.edison.project.ProjectApplication' 
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	awsSdkVersion = "2.25.26"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.springframework.data:spring-data-jpa:3.4.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.squareup.okhttp3:okhttp:4.10.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'

	// Lombok 설정
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'mysql:mysql-connector-java:8.0.33'

	// 테스트 관련
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.security:spring-security-oauth2-jose'
	implementation 'com.auth0:java-jwt:4.2.1'
	implementation 'com.google.api-client:google-api-client:1.33.0'
	implementation 'com.google.http-client:google-http-client-gson:1.39.2'

	//로그아웃
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// s3
	implementation "software.amazon.awssdk:s3:${awsSdkVersion}"
	implementation "software.amazon.awssdk:auth:${awsSdkVersion}"
	implementation "software.amazon.awssdk:regions:${awsSdkVersion}"
	implementation "software.amazon.awssdk:s3control:${awsSdkVersion}"
	implementation "software.amazon.awssdk:s3outposts:${awsSdkVersion}"

}
tasks.named('test') {
	useJUnitPlatform()
}

def querydslDir = "src/main/generated"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

clean.doLast {
	file(querydslDir).deleteDir()
}

clean {
	delete fileTree(dir: 'src/main/generated', include: '**/*.java')
}
tasks.withType(JavaCompile) {
	options.compilerArgs += [
			'--add-opens',
			'java.base/java.lang=ALL-UNNAMED',
			'--add-opens',
			'java.base/java.util=ALL-UNNAMED'
	]
}
